# sdr-topology

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml  codeql.yml
docs/: topological-analysis-of-rf-signals.md
sdr_topology/: cli.py  pipeline.py
sdr_topology/capture/: playback.py  rtlsdr.py
sdr_topology/embedding/: delay.py  iq.py  utils.py
sdr_topology/profiles/: library.py
sdr_topology/topology/: features.py  persistence.py
sdr_topology/util/: helper.py
sdr_topology/visualization/: diagrams.py  embedding.py
tests/functional/: test_capture_hardware.py
tests/unit/: test_capture.py  test_capture_unit.py  test_cli.py  test_embedding.py  test_iq_embedding.py  test_pipeline.py
tests/unit/profiles/: test_profiles.py
tests/unit/topology/: test_features.py  test_persistence.py
tests/unit/vizualization/: test_diagrams.py  test_embedding.py
