[project]
name = "sdr-topology"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "click>=8.4.2",
    "matplotlib>=3.11.0",
    "numpy>=2.5.0",
    "persim>=0.3.8",
    "pyrtlsdr>=0.4.0",
    "pyrtlsdrlib>=0.0.4",
    "rich>=15.0.0",
    "ripser>=0.6.15",
    "scipy>=1.18.0",
]

[project.scripts]
sdrtopo = "sdr_topology.cli:main"

[dependency-groups]
dev = [
    "ruff>=0.6.0",
    "pytest>=7.0.0",
]

[tool.setuptools.packages.find]
exclude = ["captures*", "tests*"]